# umangsth.github.io

./: .gitignore  404.html  drawings.html  drawings.txt  eslint.config.mjs  games.html  games.txt  index.html  index.txt  next.config.ts  package-lock.json  package.json  resume.html  resume.txt  tailwind.config.ts
.github/workflows/: deploy.yml  nextjs.yml
_next/static/NTnxKu2ubVIWXwtw3zN7A/: _buildManifest.js
_next/static/chunks/: 123-018eb4cb9321a392.js  123-5d093a6bfd76c7e8.js  123-6eb1b1355d8eb658.js  123-f227117ed2ac37e3.js  53c13509-c4a5b80dde9d55d5.js  587-7fb178260cefe4b4.js  8e1d74a4-bcca4fedb1343783.js  970-125e120de957de2b.js  main-app-6c57ef532ac45f92.js  main-c43420fd65755b1e.js  webpack-5cb914e6ad9e32c0.js
_next/static/css/: 02af8b6c1c8b5e0f.css  65da47a2cfcbc513.css  a5ecd9c1ebaa0cfe.css
public/game/: duck.xcf  maze_1.txt
src/: global.d.ts  stack.txt
src/app/: globals.css  layout.tsx  page.tsx
src/app/component/: about.tsx  data.ts  exprience.tsx  header.tsx  projects.tsx  studies.tsx  time-line.tsx
src/app/drawings/: page.tsx
src/app/games/: Note.txt  page.tsx
src/app/games/hello-wasm/: Cargo.toml
src/app/games/hello-wasm/src/: lib.rs
src/app/games/hello-wasm/src/conway_gol/: mod.rs
src/app/games/hello-wasm/src/evade_duck/: mod.rs
src/app/games/hello-wasm/src/maze/: mod.rs
src/app/games/hello-wasm/src/maze/pathfinding/: astar.rs  best_first.rs  bfs.rs  dfs.rs  mod.rs
src/app/games/hello-wasm/src/pathfinding/: astar.rs  best_first.rs  bfs.rs  dfs.rs  mod.rs
src/app/helper/: helper_function.ts
src/app/resume/: page.tsx
(+40 files in other folders)
