[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Document", "Window"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }



[lib]
crate-type = ["cdylib", "rlib"]

